[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gem/gem-02.png" type="Texture" id=1]
[ext_resource path="res://assets/gem/gem-04.png" type="Texture" id=2]
[ext_resource path="res://assets/gem/gem-03.png" type="Texture" id=3]
[ext_resource path="res://assets/gem/gem-01.png" type="Texture" id=4]
[ext_resource path="res://assets/gem/gem-05.png" type="Texture" id=5]
[ext_resource path="res://rsc/gem/Gem.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "save",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "mov",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.3724, 30.1269 )

[node name="Gem" type="Area2D" groups=[
"g",
]]
collision_mask = 2
script = ExtResource( 6 )

[node name="Animation" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "save"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.633792, 0.832441 )
scale = Vector2( 0.586621, 0.566756 )
[connection signal="area_entered" from="." to="." method="_on_Gem_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Gem_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
